2005-03-22	Istvan Varga	<istvan@csounds.com>
	* H/diskin2.h:
	* OOps/diskin2.c:
	  various minor code changes
	* Top/one_file.c:
	  fixed CsFileB tag
	* util1/csd_util/base64.c:
	* util1/csd_util/cs.c:
	* util1/csd_util/csb64enc.c:
	* util1/csd_util/makecsd.c:
	  new utilities

2005-03-21	Istvan Varga	<istvan@csounds.com>
	* Engine/entry1.c:
	* H/diskin2.h:
	* OOps/diskin2.c:
	  new opcode
	* InOut/libsnd_u.c:
	* OOps/sndinfUG.c:
	  bug fixes in opening sound files
	* OOps/diskin.c:
	  fixed (partly) clicks in multichannel input; still some bugs
	* H/soundio.h:
	  fixed soundin crash (was actually caused by unused SOUNDIN.kfrqratio)

2005-03-21  John ffitch  <jpff@codemist.co.uk>

	* Engine/sread.c (MARGIN): Increase to 600, but needs to be
	rethought 

2005-03-18	Istvan Varga	<istvan@csounds.com>
	* Engine/oload.c:
	* H/csoundCore.h:
	* H/fftlib.h:
	* OOps/fftlib.c:
	  minor code changes related to FFT functions
	* Opcodes/ftconv.c:
	  removed use of direct convolution due to patent issues
	* H/csdl.h:
	  removed some unused macros (fewer is better)
	* Engine/fgens.c:
	  minor GEN52 fix

2005-03-15  Michael Gogins <gogins@pipeline.com>
	* The Loris opcodes now work.
	* Removed pyrun.dll and -lswigpy from SConstruct,
	as SWIG 1.3.24 (current stable version) does not use it.
	* The Java wrappers are now built as a jar containing
	the CsoundVST package.
	* Added option to not build Java wrappers; as a result,
	CsoundVST builds on Linux again.
	* Removed documentation from the Windows installer.

2005-03-15  John ffitch  <jpff@cs.bath.ac.uk>

	* H/soundio.h (SOUNDIN): 
	* InOut/libsnd.c (sndinset): 
	* OOps/diskin.c (newsndinset): 
	* H/diskin.h (SOUNDINEW): Added skipinit argument to diskin and soundin

2005-03-14  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/modal4.c (marimbaset): Make zero valid probability for
	multiple strikes

2005-03-14	Istvan Varga	<istvan@csounds.com>
	* SConstruct:
	* Engine/oload.c:
	* H/csound.h:
	* H/csoundCore.h:
	* H/fftlib.h: