@@ -1,3 +1,9 @@
+2005-03-23	Istvan Varga	<istvan@csounds.com>
+	* OOps/ugens2.c:
+	* Opcodes/lowpassr.c:
+	* Top/one_file.c:
+	  minor fixes
+
 2005-03-22	Istvan Varga	<istvan@csounds.com>
 	* H/diskin2.h:
 	* OOps/diskin2.c:
